# Tg-Bot_IceCream_Shop

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
app/: main.py
app/admin/: authentication.py  main.py  views.py
app/core/orders/: constants.py  models.py  repositories.py  services.py
app/core/users/: constants.py  models.py  repositories.py  services.py
app/handlers/: __init__.py  commands.py  deserializator.py  filters.py  helpers.py  waiter_commands.py
app/infra/postgres/: db.py
app/jobs/: sync_roles.py
settings/: config.py
